Dynamic list name, view fields and group columns added

--- a/src/webparts/listMultilevelGroupView/components/ListMultilevelGroupView.module.scss
+++ b/src/webparts/listMultilevelGroupView/components/ListMultilevelGroupView.module.scss
@@ -32,3 +32,13 @@
     }
   }
 }
+
+
+
+// :global .ms-List-page{
+//   padding-left: 5px;
+// }
+
+:global #workbenchPageContent{
+  max-width: 100% !important;
+}
